--- a/INDEX2.HTML
+++ b/INDEX2.HTML
@@ -10,7 +10,7 @@
     <body>
         <div class="player">
             <div class="imagebox">
-                <image src="drop.jpg" alt="AW"/>
+                <image src="Drop.jpg" alt="AW"/>
             </div>
             <audio src="Droplord/Donyin-music.mp3" type="audio/mp3" controls autoplay loop></audio>
         </div>
